# FastAPI-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/.github/: pull_request_template.md
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/.github/workflows/: linters.yaml  tests.yaml
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/docker/: .env.example  Dockerfile  docker-compose.yml
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/: conftest.py  main.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/api/: dependencies.py  router.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/controllers/: __init__.py  base.py  users.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/core/: config.py  db.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/migrations/: env.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/models/: __init__.py  dogs.py  users.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/schemas/: __init__.py  auth.py  base.py  users.py
{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/src/tests/: conftest.py  test_auth.py  test_users.py
(+8 files in other folders)
